--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/markdown-draft-js": "^2.2.7",
     "@types/react-draft-wysiwyg": "^1.13.8",
     "@vercel/blob": "^0.22.3",
+    "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
@@ -46,6 +47,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
