--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@types/markdown-draft-js": "^2.2.7",
     "@types/react-draft-wysiwyg": "^1.13.8",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.22.3",
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
